# libccr

./: .gitignore  .travis.yml  CMakeLists.txt  Doc.md  LICENSE  Makefile  Readme.md  ccr.c  ccr.h  test_lib.c  test_macro.c
examples/bridge/: Makefile  Readme.md  bridge.c
examples/rollercoaster/: Makefile  Readme.md  common.h  customer.c  main.c  rollercoaster.c
